# picoW

Mon_Temp_Hum_Lum/: Cargo.toml  rustfmt.toml
Mon_Temp_Hum_Lum/src/: main.rs
Mon_Temp_Hum_Lum/src/modular/: adc.rs  channel_adc_0.rs  channel_temp.rs  cyw43.rs  dht.rs  led.rs  mod.rs  oled.rs
pico_2W/: Cargo.toml
pico_2W/.cargo/: config.toml
pico_2W/src/: main.rs
pico_W/: Cargo.toml
pico_W/cargo/: config.toml
pico_W/cyw43-firmware/: README.md
pico_W/src/: main.rs
pico_W/vscode/: settings.json
