[package]
name = "pico_W"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
cyw43 = { version = "0.3.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.4.0", features = ["defmt"] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "defmt", "executor-thread", "executor-interrupt", "task-arena-size-24576"] } #The size can be 20kb, 24kb and 32kb
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-rp = { version = "0.4.0", features = ["defmt", "rp2040", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
portable-atomic = { version = "1.11.0", features = ["critical-section"] }
static_cell = "2.1.0"

[profile.release]
opt-level = 3         # Optimize for maximum execution speed
lto = "fat"           # Enable the most aggressive Link Time Optimization
codegen-units = 1     # Reduce the number of code generation units, increasing optimization time but improving performance
panic = "abort"       # Use 'abort' instead of 'unwind' for panic handling
debug = true          # Allows defmt to display log locations even in release

[profile.dev]
opt-level = 0         # Optimize for debugging
lto = true            # Enable Link Time Optimization (LTO)
panic = "abort"       # Use 'abort' instead of 'unwind' for panic handling
debug = true          # Allows defmt to display log locations even in release
